# NB_LMS

./: README.md  pyproject.toml
nb_lms/: hooks.py  modules.txt
nb_lms/fixtures/: course_chapter.json  course_lesson.json  custom_field.json  lms_assignment.json  lms_batch.json  lms_course.json  property_setter.json  role_profile.json
nb_lms/overrides/: job_opportunity.py
nb_lms/public/js/: lms_batch.js  lms_course.js
